--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "use-local-storage": "^3.0.0"
+    "use-debounce": "^10.0.2",
+    "use-local-storage": "^3.0.0",
+    "wouter": "^3.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
