--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "use-debounce": "^10.0.2",
     "use-local-storage": "^3.0.0",
+    "uuid": "^10.0.0",
     "wouter": "^3.3.1"
   },
   "devDependencies": {
